# langgraph-agent-starter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
configs/: local.yaml
configs/workflows/: demo-chat.yaml  demo-summary.yaml  demo_chat.yaml  demo_hitl.yaml  demo_summary.yaml
docs/: curl_examples.md  curl_examples.zh-CN.md  design.md  design.zh-CN.md  dynamic_config.md  dynamic_config.zh-CN.md  usage.md  usage.zh-CN.md
docs/releases/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md
scripts/: dev.sh  format.sh  lint.sh  push_nacos_configs.sh  run.sh  run_nacos_18080.sh  run_nacos_8080.sh  test.sh
src/app/: main.py
src/app/bootstrap/: container.py  lifespan.py
src/app/errors/: __init__.py  handlers.py
src/app/middleware/: __init__.py  request_logging.py
src/application/services/: chat_completion_service.py  routing_service.py  workflow_catalog_service.py
src/domain/auth/: errors.py  models.py
src/domain/config/: view.py
src/domain/workflows/: errors.py  spec.py
src/infrastructure/config/: provider.py  provider_cleanup.py  workflow_registry.py
src/infrastructure/http/: client.py  errors.py
src/infrastructure/llm/: context.py  gateway.py  mock_client.py  streaming.py
src/infrastructure/logging/: factory.py
src/infrastructure/monitoring/: langfuse.py
src/infrastructure/persistence/: checkpointer.py  events.py  runtime.py
src/presentation/schemas/: openai.py
src/workflows/: registry.py
src/workflows/common/: input_messages.py  llms.py  (+1 more)
tests/: conftest.py
tests/integration/: test_openai_api.py
tests/unit/: test_checkpointer.py  test_config_view.py  test_dynamic_config_backends.py  test_dynamic_config_provider.py  test_http_client.py  test_input_messages.py  test_langfuse_factory.py  test_llm_gateway.py  test_logging_factory.py  test_registry.py  test_routing_service.py  test_runtime_input_messages.py  test_runtime_langfuse_config.py  test_system_key_validation.py  test_workflow_config_registry.py
(+12 files in other folders)
